[tool.poetry]
name = "my-locations-api"
version = "0.1.0"
description = "API service for my-locations application"
authors = ["Mark <super16mail@gmail.com>"]
packages = [{include = "my_locations_api"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
asyncpg = "^0.28.0"
sanic = {extras = ["ext"], version = "^23.6.0"}
alembic = "^1.12.0"

[tool.poetry.group.development.dependencies]
ruff = "^0.0.287"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "A",
    "COM",
    "EM",
    "E",
    "I",
    "N",
    "S",
    "T20",
    "TCH",
    "W"
]
exclude = [
    "alembic",
    ".mypy_cache",
    "pytest_cache",
    ".ruff_cache",
]
