[tool.poetry]
name = "my-locations-api"
version = "0.1.0"
description = "API service for my-locations application"
authors = ["Mark <super16mail@gmail.com>"]
packages = [{include = "my_locations_api"}]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.12.1"
asyncpg = "^0.29.0"
sanic = {extras = ["ext"], version = "^23.6.0"}
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
python = "^3.11"

[tool.poetry.group.development.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.5"
sanic-testing = "^23.6.0"
types-ujson = "^5.8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "A",
    "COM",
    "EM",
    "E",
    "I",
    "N",
    "S",
    "T20",
    "TCH",
    "W"
]
exclude = [
    "alembic",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.extend-per-file-ignores]
"tests/test_*.py" = ["S101"]
